--- a/res/drawable/grey_no_gradient_interval.xml
+++ b/res/drawable/grey_no_gradient_interval.xml
@@ -20,10 +20,10 @@
             <corners
                     android:radius="0dp" />
             <padding
-                    android:left="8dp"
-                    android:top="8dp"
-                    android:right="8dp"
-                    android:bottom="8dp" />
+                    android:left="@dimen/eight"
+                    android:top="@dimen/eight"
+                    android:right="@dimen/eight"
+                    android:bottom="@dimen/eight" />
         </shape>
     </item>
 
