--- a/res/drawable/info_back.xml
+++ b/res/drawable/info_back.xml
@@ -2,14 +2,14 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="@color/death_grey" />
+            <solid android:color="@color/white_back" />
             <corners
                     android:radius="12dp" />
             <padding
-                    android:left="8dp"
-                    android:top="8dp"
-                    android:right="8dp"
-                    android:bottom="8dp" />
+                    android:left="@dimen/eight"
+                    android:top="@dimen/eight"
+                    android:right="@dimen/eight"
+                    android:bottom="@dimen/eight" />
         </shape>
     </item>
 
