--- a/res/drawable/text_on_map_back.xml
+++ b/res/drawable/text_on_map_back.xml
@@ -4,7 +4,7 @@
 
     <item >
         <shape android:shape="rectangle"  >
-            <corners android:radius="4dp" />
+            <corners android:radius="@dimen/four" />
             <stroke android:width="1dip" android:color="@color/white_back" />
             <solid android:color="@color/death_grey"/>
             <!--<gradient android:angle="-90" android:startColor="@color/interval_green" android:endColor="@color/interval_green_pressed" />-->
