--- a/res/layout/custom_plans_spinner_item.xml
+++ b/res/layout/custom_plans_spinner_item.xml
@@ -2,18 +2,18 @@
 
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="fill_parent"
-                android:layout_height="wrap_content" android:background="@drawable/grey_no_gradient_interval"  android:padding="8dp" android:minHeight="44dp"
+                android:layout_height="wrap_content" android:background="@drawable/grey_no_gradient_interval"  android:padding="@dimen/eight" android:minHeight="44dp"
         >
 
     <ImageView android:id="@+id/planIconSpinner"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
-               android:layout_centerVertical="true" android:layout_alignParentLeft="true" android:layout_marginRight="8dp"
+               android:layout_centerVertical="true" android:layout_alignParentLeft="true" android:layout_marginRight="@dimen/eight"
                android:src="@drawable/plan_32"/>
 
 
     <TextView android:textStyle="bold" android:layout_toRightOf="@+id/planIconSpinner" android:layout_centerVertical="true" android:id="@+id/planDescriptionSpinner" android:textColor="@color/white_back"  android:layout_width="wrap_content" android:layout_height="wrap_content" />
 
-    <TextView  android:layout_alignParentRight="true" android:layout_centerVertical="true"   android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/select" android:textColor="@color/white_back" android:layout_marginRight="4dp"/>
+    <TextView  android:layout_alignParentRight="true" android:layout_centerVertical="true"   android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/select" android:textColor="@color/white_back" android:layout_marginRight="@dimen/four"/>
 
 
 </RelativeLayout>
