--- a/res/layout/list_interval_row.xml
+++ b/res/layout/list_interval_row.xml
@@ -2,18 +2,18 @@
 
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="fill_parent"
-                android:layout_height="44dp" android:background="@drawable/grey_no_gradient_interval"  android:padding="4dp" android:minHeight="44dp"
+                android:layout_height="44dp" android:background="@drawable/grey_no_gradient_interval"  android:padding="@dimen/four" android:minHeight="44dp"
         >
 
     <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content"
-               android:layout_centerVertical="true" android:layout_alignParentLeft="true" android:layout_marginRight="8dp"
+               android:layout_centerVertical="true" android:layout_alignParentLeft="true" android:layout_marginRight="@dimen/eight"
                android:id="@+id/opponentIcon" android:src="@drawable/interval_flag"/>
 
 
     <TextView android:textStyle="bold" android:layout_toRightOf="@+id/opponentIcon" android:id="@+id/distanceIntervalText" android:textColor="@color/white_back"  android:layout_width="wrap_content" android:layout_height="wrap_content" />
     <TextView android:textStyle="italic" android:layout_toRightOf="@+id/opponentIcon" android:layout_below="@+id/distanceIntervalText" android:id="@+id/timeIntervalText" android:textColor="@color/white_back" android:layout_width="wrap_content" android:layout_height="wrap_content" />
 
-    <TextView android:textStyle="italic|bold" android:layout_alignParentRight="true" android:layout_centerVertical="true" android:id="@+id/fastestIntervalText" android:textColor="@color/interval_green" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/fastest" android:layout_marginRight="4dp"/>
+    <TextView android:textStyle="italic|bold" android:layout_alignParentRight="true" android:layout_centerVertical="true" android:id="@+id/fastestIntervalText" android:textColor="@color/interval_green" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/fastest" android:layout_marginRight="@dimen/four"/>
 
 
 </RelativeLayout>
