--- a/res/layout/list_plan_row.xml
+++ b/res/layout/list_plan_row.xml
@@ -2,19 +2,19 @@
 
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="fill_parent"
-                android:layout_height="wrap_content" android:background="@drawable/grey_no_gradient_interval"  android:padding="8dp" android:minHeight="44dp"
+                android:layout_height="wrap_content" android:background="@drawable/grey_no_gradient_interval"  android:padding="@dimen/eight" android:minHeight="44dp"
         >
 
     <ImageView android:id="@+id/planIcon"
             android:layout_width="wrap_content" android:layout_height="wrap_content"
-               android:layout_centerVertical="true" android:layout_alignParentLeft="true" android:layout_marginRight="8dp"
+               android:layout_centerVertical="true" android:layout_alignParentLeft="true" android:layout_marginRight="@dimen/eight"
                android:src="@drawable/plan_32"/>
 
 
     <TextView android:textStyle="bold" android:layout_toRightOf="@+id/planIcon" android:id="@+id/planDescription" android:textColor="@color/white_back"  android:layout_width="wrap_content" android:layout_height="wrap_content" />
     <TextView android:textStyle="italic" android:layout_toRightOf="@+id/planIcon" android:layout_below="@+id/planDescription" android:id="@+id/planInfo" android:textColor="@color/white_back" android:layout_width="wrap_content" android:layout_height="wrap_content" />
 
-    <TextView  android:layout_alignParentRight="true" android:layout_centerVertical="true" android:text="Hold to delete"  android:layout_width="wrap_content" android:layout_height="wrap_content"  android:layout_marginRight="4dp" android:textStyle="italic"/>
+    <TextView  android:layout_alignParentRight="true" android:layout_centerVertical="true" android:text="Hold to delete"  android:layout_width="wrap_content" android:layout_height="wrap_content"  android:layout_marginRight="@dimen/four" android:textStyle="italic"/>
 
 
 </RelativeLayout>
