--- a/res/layout/list_running_row.xml
+++ b/res/layout/list_running_row.xml
@@ -8,7 +8,7 @@
 
 
 
-    <LinearLayout android:layout_alignParentLeft="true" android:layout_marginLeft="8dp"  android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerVertical="true">
+    <LinearLayout android:layout_alignParentLeft="true" android:layout_marginLeft="@dimen/eight"  android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerVertical="true">
         <TextView android:id="@+id/runningDescription" android:textColor="@android:color/black" android:textStyle="bold" android:layout_centerVertical="true" android:layout_width="wrap_content" android:layout_height="wrap_content" />
         <TextView android:id="@+id/runningDate" android:textStyle="italic" android:textColor="@color/interval_green"  android:layout_width="wrap_content"
                   android:layout_below="@id/runningDescription" android:layout_height="wrap_content" />
@@ -23,7 +23,7 @@
               android:layout_alignParentRight="true"
               android:textSize="@dimen/medium_text"
               android:textStyle="bold"
-              android:layout_marginRight="4dp"
+              android:layout_marginRight="@dimen/four"
             />
 
 </RelativeLayout>
