--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -5,6 +5,7 @@
     <style name="CustomActionBarTheme"
            parent="@android:style/Theme.Holo.Light">
         <item name="android:actionBarStyle">@style/MyActionBar</item>
+        <item name="android:typeface">monospace</item>
 
         <!-- Support library compatibility -->
         <!--<item name="actionBarStyle">@style/MyActionBar</item>-->
