1. start service as foreground 2. change frg interval

--- a/res/layout/frg_interval.xml
+++ b/res/layout/frg_interval.xml
@@ -223,7 +223,7 @@
                           android:layout_alignParentTop="true"
                           android:textSize="@dimen/medium_text"
                           android:textColor="@color/drawer_black"
-                          android:textStyle="bold|italic"
+                          android:textStyle="bold"
                           android:id="@+id/roundsText"
                           android:text="@string/text_rounds"
                         />
