--- a/res/layout/frg_interval.xml
+++ b/res/layout/frg_interval.xml
@@ -172,7 +172,7 @@
                       android:layout_above="@+id/timerProgressWheel"
                       android:layout_width="fill_parent"
                       android:layout_height="wrap_content"
-                      android:visibility="invisible"/>
+                      android:visibility="gone"/>
 
             <com.kostas.onlineHelp.ProgressWheel
                     android:id="@+id/timerProgressWheel"
