--- a/res/layout/list_running_row.xml
+++ b/res/layout/list_running_row.xml
@@ -2,15 +2,15 @@
 
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="fill_parent"
-                android:layout_height="wrap_content" android:background="@drawable/grey_gradient_running"  android:padding="10dp" android:minHeight="48dp"
+                android:layout_height="wrap_content" android:background="@drawable/grey_gradient_running"  android:padding="10dp" android:minHeight="@dimen/standard_view_height"
         >
 
 
 
 
     <LinearLayout android:layout_alignParentLeft="true" android:layout_marginLeft="@dimen/eight"  android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerVertical="true">
-        <TextView android:id="@+id/runningDescription" android:textColor="@android:color/black" android:textStyle="bold" android:layout_centerVertical="true" android:layout_width="wrap_content" android:layout_height="wrap_content" />
-        <TextView android:id="@+id/runningDate" android:textStyle="italic" android:textColor="@color/interval_green"  android:layout_width="wrap_content"
+        <TextView android:id="@+id/runningDescription" android:textColor="@color/interval_green" android:layout_centerVertical="true" android:layout_width="wrap_content" android:layout_height="wrap_content" />
+        <TextView android:id="@+id/runningDate" android:textStyle="italic" android:textColor="@color/drawer_black"  android:layout_width="wrap_content"
                   android:layout_below="@id/runningDescription" android:layout_height="wrap_content" />
     </LinearLayout>
 
