--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -17,7 +17,9 @@
     <dimen name="circular_image_size">70dp</dimen>
     <dimen name="twenty">20dp</dimen>
     <dimen name="eight">8dp</dimen>
+    <dimen name="radius_eight">8dp</dimen>
     <dimen name="standard_view_height">48dp</dimen>
+
     <dimen name="list_view_height">64dp</dimen>
 
 </resources>
