--- a/res/drawable/descr_picker_inactive.xml
+++ b/res/drawable/descr_picker_inactive.xml
@@ -3,7 +3,7 @@
 
     <item>
         <shape android:shape="rectangle"  >
-            <corners android:topLeftRadius="12dp" android:bottomLeftRadius="12dp" />
+            <corners android:topLeftRadius="@dimen/radius_eight" android:bottomLeftRadius="@dimen/radius_eight" />
             <solid android:color="@color/circle_grey"/>
             <size android:height="48dp"/>
         </shape>
