--- a/res/drawable/plus_minus_picker_selector.xml
+++ b/res/drawable/plus_minus_picker_selector.xml
@@ -3,7 +3,7 @@
 
     <item>
         <shape android:shape="rectangle"  >
-            <corners android:radius="12dp" />
+            <corners android:radius="@dimen/radius_eight" />
             <solid android:color="@color/interval_green"/>
         </shape>
 
