--- a/res/drawable/value_picker_selector.xml
+++ b/res/drawable/value_picker_selector.xml
@@ -3,7 +3,7 @@
 
     <item>
         <shape android:shape="rectangle"  >
-            <corners android:topRightRadius="12dp" android:bottomRightRadius="12dp" />
+            <corners android:topRightRadius="@dimen/radius_eight" android:bottomRightRadius="@dimen/radius_eight" />
             <solid android:color="@color/white_back"/>
             <size android:height="48dp"/>
         </shape>
