--- a/res/layout/frg_interval.xml
+++ b/res/layout/frg_interval.xml
@@ -122,8 +122,8 @@
                               android:layout_marginBottom="@dimen/twenty">
 
                 <Button
-                        android:layout_marginRight="@dimen/eight"
-                        android:layout_weight="2"
+
+                        android:layout_weight="3"
                         android:layout_width="0dp"
                         android:layout_height="54dp"
                         android:drawableStart="@drawable/arrow_right_v2"
@@ -138,13 +138,15 @@
                        />
 
                     <Button
+                            style="?android:attr/buttonBarButtonStyle"
+                            android:layout_marginLeft="@dimen/margin10"
                             android:layout_weight="1"
                             android:layout_width="0dp"
                             android:layout_height="54dp"
-                            android:text="@string/save_plan"
-                            android:textStyle="bold"
-                            android:textColor="@color/white_back"
+                            android:text="@string/save"
                             android:textSize="@dimen/xmedium_text"
+                            android:textStyle="italic"
+                            android:textColor="@color/white_back"
 
                             android:background="@drawable/plus_minus_selector"
                             android:id="@+id/buttonSavePlan"
@@ -241,21 +243,6 @@
                           android:background="@drawable/rounds_back"
                         />
 
-                <!--</RelativeLayout>-->
-
-                <!--<TextView android:layout_width="wrap_content"-->
-                          <!--android:layout_height="wrap_content"-->
-                          <!--android:layout_alignParentLeft="true"-->
-                          <!--android:layout_below="@+id/roundsText"-->
-                          <!--android:textSize="@dimen/medium_text"-->
-                          <!--android:textColor="@color/drawer_black"-->
-                          <!--android:textStyle="bold"-->
-                          <!--android:id="@+id/paceText"-->
-                          <!--android:text="@string/text_pace"-->
-                        <!--/>-->
-
-
-            <!--<RelativeLayout android:layout_alignParentRight="true" android:layout_marginRight="@dimen/eight"  android:background="@drawable/time_back" android:padding="10dp" android:id="@+id/textsInfoRun" android:layout_below="@+id/buttonStart" android:layout_width="fill_parent" android:layout_height="wrap_content">-->
 
             <TextView android:layout_width="0dp"
                       android:layout_weight="1"
@@ -268,17 +255,6 @@
                           android:text="@string/text_time"
                           android:background="@drawable/time_back"
                         />
-
-                <!--<TextView android:layout_width="wrap_content"-->
-                          <!--android:layout_height="wrap_content"-->
-                          <!--android:layout_alignParentRight="true"-->
-                          <!--android:layout_below="@+id/timeText"-->
-                          <!--android:textSize="@dimen/medium_text"-->
-                          <!--android:textColor="@color/drawer_black"-->
-                          <!--android:textStyle="bold"-->
-                          <!--android:id="@+id/avgPaceText"-->
-                          <!--android:text="@string/text_avg_pace"-->
-                        <!--/>-->
 
                </LinearLayout>
             </RelativeLayout>
